# quant-finance

./: LICENSE  README.md  justfile
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/bindings/: CMakeLists.txt  bindings.cpp
cpp/docs/: Doxyfile  api.rst  conf.py  index.rst
cpp/gcovr/: gcovr.cfg
cpp/gcovr/templates/: source_page.content.html  source_page.summary.html
cpp/gcovr_templates/: directory_page.content.html  directory_page.summary.html
cpp/gdb/: eigen_printers.py
cpp/lib/: CMakeLists.txt
cpp/lib/inc/core_lib/: core_lib.hpp
cpp/lib/inc/quant_finance/: quant_finance.hpp
cpp/lib/src/: core_lib.cpp  quant_finance.cpp
cpp/lib/tests/integration/: CMakeLists.txt  test_core_lib_integration.cpp  test_quant_finance_integration.cpp
cpp/lib/tests/unit/: CMakeLists.txt  test_core_lib.cpp  test_quant_finance.cpp
hooks/: pre-commit
python/: .gitignore  mypy.ini  pyproject.toml  ruff.toml
python/docs/: api.rst  conf.py  index.rst
python/src/core_lib/: math.py
python/src/quant_finance/: math.py
python/tests/integration/: test_core_lib.py  test_quant_finance.py
python/tests/unit/: test_core_lib.py  test_quant_finance.py
